[project]
name = "find_line_lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-image-diff>=0.0.14",
    "pytest-regressions[num-image]>=2.10.0",
]
